src/test/ui/coherence/coherence_local_ref.stderr
error: compilation successful
  --> $DIR/coherence_local_ref.rs:27:1
   |
LL | fn main() { } //~ ERROR compilation successful
   | ^^^^^^^^^^^^^

error: aborting due to previous error

